# EV3

./: .gitignore  .gitmodules  LICENSE.md  README.md  dockerfile  wrtcr_conf.json
container/: build_ev3wrtc.sh  build_website.sh  ev3wrtc.sh  run_ev3wrtc.sh  run_website.sh
container/ev3wrtc/: Dockerfile  automate.sh  build_robot.sh  debug_robot.sh
container/website/: dockerfile
robot/: CMakeLists.txt  README.md  wrtcr_conf.json  wrtcrobot.service
robot/src/: CMakeLists.txt  aktsens.c  aktsens.h  config.c  config.h  data.c  data.h  default_handlers.c  default_handlers.h  main.c  main.h  metadevices.c  metadevices.h  setup.c  setup.h  signaling.c  signaling.h  utils.c  utils.h
website/: README.md  startWebsite.sh
website/css/main/: main.css
website/src/: anleitung.html  ansteuerung.html  entwicklung.html  funktionsweise.html  index-12.html  index.html  main.css  main.js  steuerung.html  steuerung0.html  steuerung1.html  steuerung2.html  wrtcr_conf.js  wrtcr_conf.json
website/src/css/main/: main.css  main1.css  steuerung.html
website/src/html/: anleitung.html  entwicklung.html  funktionsweise.html  index.html  steuerung.html  try.html
website/src/js/main/: ansteuerung.js  loadjson.js  main.js  main1.js  motor.js  sensor.js  signaling.js  steuerung.js  webrtc.js
